# suddenly

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  Procfile  docker-compose.dev.yml  docker-compose.yml  index.html  manage.py  mkdocs.yml  pyproject.toml  pytest.ini  railway.toml  requirements.txt  sitemap.xml
.claude/: settings.local.json
.claude/agents/: activitypub-expert.md  claude-code-optimizer.md  custom-ada.md  django-developer.md  documentation-architect.md  technical-architect.md
.github/: copilot-instructions.md  review-instructions.md
.github/workflows/: ci.yml  docs.yml
aidd_docs/: CATALOG.md  KNOWLEDGE.md  README.md
aidd_docs/decisions/: DEC-038-offer-federation-format.md
aidd_docs/harvests/: 2026_05_08-harvest.md  2026_07_15-harvest.md
aidd_docs/internal/: IMPORT_EXPORT.md
aidd_docs/memory/: AGENTS_COORDINATION.md  ARCHITECTURE.md  CODEBASE_MAP.md  CODING_ASSERTIONS.md  DEPLOYMENT.md  GOLDEN_PRINCIPLES.md  PROJECT_BRIEF.md  TESTING.md  VCS.md  architecture.md
aidd_docs/tasks/: 2026_07_15-audit-fix-high-findings.md  MASTER_PLAN.md  suddenly-stories.md
aidd_docs/wireframes/: 00-ux-patterns.md  01-layout.md  02-home.md  03-auth.md  04-profile.md  05-games.md  06-reports.md  07-characters.md  08-quotes.md  09-links.md  10-feed.md  11-notifications.md  12-gm-dashboard.md  13-admin.md  14-federation.md  15-settings.md  16-misc.md  17-instance-about.md  18-report-character-links.md  18-thread-view.md  COMPONENT_MAP.md  PERSONA_FEDIVERSE_AUDIT.md  README.md  STYLE_GUIDE.md  suddenly-character-create.html  suddenly-composer.html  suddenly-game-create.html  suddenly-maquette-v3.html  suddenly-scene-edit.html
code/: CONTRIBUTING.md  README.md  docker-compose.dev.yml  docker-compose.yml  requirements.txt
code/frontend/: package.json
code/scripts/: backup.sh  init-dev.sh  restore.sh
code/suddenly/: settings.py
code/templates/: base.html
code/tests/: conftest.py  test_activitypub.py  test_api.py
config/: asgi.py
config/settings/: base.py  development.py  production.py
design/: components.json  design-system.md  tokens.json
design-system/: index.html
design/adapters/: tokens.css  uno-tokens.mjs
design/critique/: 2026_07_14-design-system.md
design/lint/: .lintrc.json  lint-core.mjs  lint-files.mjs
docs/: README.md  design-system.md  fiction-order.md  import-export.md  index.md  install-docker.md  rules.md  translations.md
docs/agents/: serious-game.md
docs/deployment/: README.md  docker.md
docs/flows/: claim-adopt-fork.md
docs/memory-bank/: 02-development-standards.md  03-task-workflow.md  ARCHITECTURE.md  CODEBASE_STRUCTURE.md  PROJECT_BRIEF.md  STACK.md  conception-jdr-activitypub.md  user-stories.md
docs/models/: README.md
docs/rules/: ARCHITECTURE.md  (+2 more)
documentation/: ARCHITECTURE.md  REVIEW-ARCHITECTURE.md
fiction-order/: index.html
frontend/: package-lock.json  package.json  pnpm-lock.yaml  uno.config.js  vite.config.js
import-export/: index.html
javascripts/: icons.js
nginx/: nginx.conf
scripts/: check-email.sh  check_po_integrity.py  deploy-alwaysdata.sh  entrypoint.sh  generate_knowledge.py  install.sh  railway_debug.py
search/: search_index.json
stylesheets/: design-system.css  extra.css
suddenly/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
templates/: 400.html  403.html  404.html  500.html  base.html
tests/: conftest.py  factories.py  test_activitypub.py  test_api.py  test_core.py  test_federation.py  test_federation_e2e.py  test_models.py  test_new_models.py  test_security.py  test_services.py  test_users.py  test_views.py
translations/: index.html
(+771 files in other folders)
